--- a/static/compatibilities/kube-prometheus-stack.yaml
+++ b/static/compatibilities/kube-prometheus-stack.yaml
@@ -5,6 +5,26 @@ readme_url: https://raw.githubusercontent.com/prometheus-community/helm-charts/m
 helm_repository_url: https://prometheus-community.github.io/helm-charts
 chart_changelog_url: https://raw.githubusercontent.com/prometheus-community/helm-charts/refs/heads/main/charts/kube-prometheus-stack/UPGRADE.md
 versions:
+- version: 80.14.4
+  kube: ['1.35', '1.34', '1.33', '1.32', '1.31', '1.30', '1.29', '1.28', '1.27', '1.26',
+    '1.25']
+  requirements: []
+  incompatibilities: []
+  summary:
+    helm_changes: ''
+    chart_updates: ['Dependency/CI maintenance only in this range:', '- 80.10.0: updates
+        the etcd-io/etcd image digest used by the chart/manifests.', '- 80.14.4: CI
+        toolchain bump (helm/helm to v4.0.5) and non-major dependency updates via
+        Renovate (chart dependencies, e.g., prometheus-operator stack subcharts).']
+    features: [No user-facing features called out in the provided notes; changes are
+        maintenance/dependency refreshes.]
+    breaking_changes: [None mentioned in the provided release notes for 80.10.0 or
+        80.14.4.]
+  chart_version: 80.14.4
+  images: ['docker.io/bats/bats:v1.4.1', 'docker.io/grafana/grafana:12.3.1', 'ghcr.io/jkroepke/kube-webhook-certgen:1.7.4',
+    'quay.io/kiwigrid/k8s-sidecar:2.2.1', 'quay.io/prometheus-operator/prometheus-operator:v0.87.1',
+    'quay.io/prometheus/alertmanager:v0.30.1', 'quay.io/prometheus/node-exporter:v1.10.2',
+    'quay.io/prometheus/prometheus:v3.9.1', 'registry.k8s.io/kube-state-metrics/kube-state-metrics:v2.17.0']
 - version: 80.10.0
   kube: ['1.35', '1.34', '1.33', '1.32', '1.31', '1.30', '1.29', '1.28', '1.27', '1.26',
     '1.25']
@@ -510,7 +530,18 @@ versions:
     '1.25', '1.24', '1.23', '1.22', '1.21', '1.20', '1.19']
   requirements: []
   incompatibilities: []
-  summary: null
+  summary:
+    helm_changes: ''
+    chart_updates: ['65.8.1: Adds more information to the selector for `additionalPodMonitors`
+        and `additionalServiceMonitors` (PR #4974).', '64.0.0: Reverts the change
+        "Add downward compat for Prom CRD" (PR #4883), effectively removing that compatibility
+        adjustment from the chart.']
+    features: ['More detailed selector metadata/behavior for `additionalPodMonitors`
+        and `additionalServiceMonitors`, improving how additional monitors are selected/matched.']
+    breaking_changes: ["Possible impact if you relied on the previously introduced\
+        \ Prometheus CRD \u201Cdownward compatibility\u201D behavior (added earlier,\
+        \ then reverted in 64.0.0). Verify CRD versions/compatibility expectations\
+        \ before upgrading."]
   chart_version: 65.8.1
   images: []
 - version: 64.0.0
