Add provider docs to terraform information
This could potentially confuse users, should be clearer now

--- a/charts/console/templates/secrets.yaml
+++ b/charts/console/templates/secrets.yaml
@@ -66,6 +66,9 @@ data:
   OIDC_CLIENT_SECRET: {{ .Values.dex.clientSecret | b64enc | quote }}
   OIDC_DISCOVERY_URL: {{ printf "https://%s/dex/.well-known/openid-configuration" .Values.ingress.console_dns | b64enc | quote }}
 {{ end}}
+{{ if .Values.console.config.rdsIamAuthentication }}
+  CONSOLE_RDS_IAM_AUTH: {{ "true" | b64enc | quote }}
+{{ end }}
 {{ if .Values.cloud.pgRootCert }}
 ---
 apiVersion: v1
