--- a/static/compatibilities/gpu-operator.yaml
+++ b/static/compatibilities/gpu-operator.yaml
@@ -8,61 +8,61 @@ versions:
   kube: ['1.34', '1.33', '1.32']
   requirements: []
   chart_version: 25.10.1
-  images: ['nvcr.io/nvidia/gpu-operator:v25.10.1', 'registry.k8s.io/nfd/node-feature-discovery:v0.18.2']
+  images: []
   incompatibilities: []
 - version: 25.10.0
   kube: ['1.34', '1.33', '1.32']
   requirements: []
   chart_version: 25.10.0
-  images: ['nvcr.io/nvidia/gpu-operator:v25.10.0', 'registry.k8s.io/nfd/node-feature-discovery:v0.18.2']
+  images: []
   incompatibilities: []
 - version: 25.3.4
   kube: ['1.34', '1.33', '1.32']
   requirements: []
   chart_version: 25.3.4
-  images: ['nvcr.io/nvidia/gpu-operator:v25.3.4', 'registry.k8s.io/nfd/node-feature-discovery:v0.17.3']
+  images: []
   incompatibilities: []
 - version: 25.3.3
   kube: ['1.34', '1.33', '1.32']
   requirements: []
   chart_version: 25.3.3
-  images: ['nvcr.io/nvidia/gpu-operator:v25.3.3', 'registry.k8s.io/nfd/node-feature-discovery:v0.17.3']
+  images: []
   incompatibilities: []
 - version: 25.3.2
   kube: ['1.34', '1.33', '1.32']
   requirements: []
   chart_version: 25.3.2
-  images: ['nvcr.io/nvidia/gpu-operator:v25.3.2', 'registry.k8s.io/nfd/node-feature-discovery:v0.17.3']
+  images: []
   incompatibilities: []
 - version: 25.3.1
   kube: ['1.33', '1.32', '1.31']
   requirements: []
   chart_version: 25.3.1
-  images: ['nvcr.io/nvidia/gpu-operator:v25.3.1', 'registry.k8s.io/nfd/node-feature-discovery:v0.17.3']
+  images: []
   incompatibilities: []
 - version: 25.3.0
   kube: ['1.33', '1.32', '1.31']
   requirements: []
   chart_version: 25.3.0
-  images: ['nvcr.io/nvidia/gpu-operator:v25.3.0', 'registry.k8s.io/nfd/node-feature-discovery:v0.17.2']
+  images: []
   incompatibilities: []
 - version: 24.9.2
   kube: ['1.32', '1.31', '1.30']
   requirements: []
   chart_version: 24.9.2
-  images: ['nvcr.io/nvidia/gpu-operator:v24.9.2', 'registry.k8s.io/nfd/node-feature-discovery:v0.16.6']
+  images: []
   incompatibilities: []
 - version: 24.9.1
   kube: ['1.32', '1.31', '1.30']
   requirements: []
   chart_version: 24.9.1
-  images: ['nvcr.io/nvidia/gpu-operator:v24.9.1', 'registry.k8s.io/nfd/node-feature-discovery:v0.16.6']
+  images: []
   incompatibilities: []
 - version: 24.9.0
   kube: ['1.31', '1.30', '1.29']
   requirements: []
   chart_version: 24.9.0
-  images: ['nvcr.io/nvidia/gpu-operator:v24.9.0', 'registry.k8s.io/nfd/node-feature-discovery:v0.16.6']
+  images: []
   incompatibilities: []
 - version: 24.6.2
   kube: ['1.31', '1.30', '1.29']
