--- a/static/compatibilities/traefik.yaml
+++ b/static/compatibilities/traefik.yaml
@@ -3,25 +3,23 @@ git_url: https://github.com/traefik/traefik
 release_url: https://github.com/traefik/traefik/releases/tag/v{vsn}
 helm_repository_url: https://traefik.github.io/charts
 versions:
-- version: 3.6.5
+- version: 3.6.6
   kube: ['1.35', '1.34', '1.33', '1.32']
   requirements: []
   incompatibilities: []
   summary:
     helm_changes: ''
     chart_updates: []
-    features: ['From v3.6.0 (baseline): added new ACME certificatesResolvers options;
-        added least-time and HighestRandomWeight load-balancing strategies; added
-        TCP (active) healthchecks and passive health checks; added Knative provider
-        and improvements to Kubernetes/Gateway API and Ingress publishing (including
-        ExternalName services); added multi-layer routing; added HTTP/2 HPACK table
-        size options; and several dashboard/UI tweaks.', v3.6.5 is a patch release
-        with no new features called out in the notes you provided; it focuses on fixes/behavior
-        clarifications.]
-    breaking_changes: ['Access logs will now also be printed for rejected requests;
-        the release note explicitly warns about this new behavior, so log volume/content
-        may change and could affect log-based alerts/costs.']
-  chart_version: 38.0.1
+    features: [New ACME certificate resolver options (v3.6.0)., 'New load-balancing
+        strategies: LeastTime and HighestRandomWeight (including CRD support) (v3.6.0).',
+      'Health check improvements: TCP health checks and passive health checks (v3.6.0).',
+      'Kubernetes-related additions: Knative provider, Gateway API bumped to v1.4.0,
+        Ingress can publish ExternalName Services, and CRD supports HighestRandomWeight
+        (v3.6.0).', 'Networking/protocol additions: AWS ECS IPv6 support, HTTP/2 HPACK
+        table size options, and plugin syscall support (v3.6.0).', 'Routing/UI enhancements:
+        multi-layer routing and dashboard Hub demo/compact table layout (v3.6.0).']
+    breaking_changes: []
+  chart_version: 38.0.2
   images: []
 - version: 3.6.0
   kube: ['1.35', '1.34', '1.33', '1.32']
